<resources>
    <string name="app_name">Pulse</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="name">Name</string>
    <string name="second_name">Second Name</string>
    <string name="age">Age</string>
    <string name="relative_phone">Relative Phone</string>
    <string name="relative_number">Relative number</string>
    <string name="pulse">Pulse</string>
    <string name="relative_name">Relative name</string>
    <string name="charts">Charts</string>
    <string name="profile">Profile</string>
    <string name="edit">edit</string>
    <string name="hints">Hints</string>
    <string name="sport">Do sports!</string>
    <string name="rest">Take a rest!</string>
    <string name="things_are_good">Things are good!</string>
</resources>
